Enhances wrestler injury and event system (#25)
* feat: Implement healing for non-participating wrestlers after show adjudication

* feat: Add @NonNull annotations to method parameters in DramaEventService

* feat: Implement real-time UI notifications for wrestler injury healed events

* feat: Resolve circular dependency and fix DramaEventServiceTest and WrestlerServiceTest

* refactor: Remove old base event and UI files after moving them to management

* feat: Implement event-driven wrestler injuries

- Resolve circular dependency between base and management packages
- Fix WrestlerServiceTest failure
- Fix DramaEventServiceTest error
- Implement UI notification for WrestlerInjuryHealedEvent
- Implement inbox storage for WrestlerInjuryHealedEvent
- Add tests for new functionality

* refactor: Clean up Segment and Wrestler classes by removing redundant code and adding @JsonIgnore annotations